--- a/app/styles/screen-govstat-goals.sass
+++ b/app/styles/screen-govstat-goals.sass
@@ -191,7 +191,7 @@ $config_header_color: #711e8c
       position: absolute
       top: 0
       width: 100%
-      z-index: 9999
+      z-index: 99
 
     .selectWrapper
       position: relative
@@ -460,6 +460,12 @@ $wizard_border_color: #ccc
       margin-right: 1em
     .datasetPicker, .datasetFromUrl, .datasetRecents
       clear: both
+
+    .datasetPicker .facetTypes
+      ul
+        width: 33.6em
+      .type-blob
+        display: none
 
     .datasetFromUrl
       overflow: hidden
